--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>IP History</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="/">IP History</a></h1>
@@ -18,8 +17,9 @@
     <table id="ipTable">
         <thead>
             <tr>
-                <th onclick="sortTable()">Timestamp</th>
-                <th>IP Address</th>
+                <th onclick="sortTable('timestamp')">Timestamp</th>
+                <th onclick="sortTable('ipv4')">IPv4 Address</th>
+                <th onclick="sortTable('ipv6')">IPv6 Address</th>
             </tr>
         </thead>
         <tbody></tbody>
