--- a/web/index.html
+++ b/web/index.html
@@ -5,28 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>IP History</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <h1><a href="/">IP History</a></h1>
     <div class="controls">
-        <button class="export" onclick="exportToCSV()">Export to CSV</button>
+        <button class="export" id="exportBtn">Export to CSV</button>
         <input type="text" id="searchBar" class="search-bar" placeholder="Search IP history..." autocomplete="off">
     </div>
     <table id="ipTable">
         <thead>
             <tr>
-                <th onclick="sortTable('timestamp')">Timestamp</th>
-                <th onclick="sortTable('ipv4')">IPv4 Address</th>
-                <th onclick="sortTable('ipv6')">IPv6 Address</th>
+                <th id="sortTimestamp">Timestamp</th>
+                <th id="sortIPv4">IPv4 Address</th>
+                <th id="sortIPv6">IPv6 Address</th>
             </tr>
         </thead>
         <tbody></tbody>
     </table>
     <div class="pagination" id="pagination">
-        <button onclick="prevPage()" id="prevBtn" disabled>&laquo; Prev</button>
-        <button onclick="nextPage()" id="nextBtn" disabled>Next &raquo;</button>
+        <button id="prevBtn" disabled>&laquo; Prev</button>
+        <button id="nextBtn" disabled>Next &raquo;</button>
     </div>
 </body>
 </html>
